# pluma-plugins

./: .build.yml  .travis.yml  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  index.html  makepot  meson.build  meson_options.txt  pluma-plugins.doap  pluma-plugins.pot  post_install.py
.tx/: config
2021-03-17-153713-27239-1@75ed8a920047_master/: index.html  report-1968ec.html  report-ba42e3.html  report-c13dc4.html
2021-03-17-153740-4588-cppcheck@75ed8a920047_master/: 14.html  15.html  26.html  27.html  3.html  30.html
2021-03-17-181710-27236-1@25498003bcf0_test-travis/: index.html  report-22bbe5.html  report-44ac7b.html  report-7f6c84.html
2021-03-17-181739-2493-cppcheck@25498003bcf0_test-travis/: 13.html  29.html  4.html  8.html  9.html  index.html  stats.html
2021-03-17-194416-27240-1@ea6d14dd7b06_master/: index.html  report-547d73.html  report-5b042c.html  report-ae56db.html
2021-03-17-194443-1179-cppcheck@ea6d14dd7b06_master/: 17.html  22.html  32.html  35.html
2021-03-29-202932-27052-1@695aaf32be9f_help-save/: index.html  report-4f685b.html  report-858338.html  (+1 more)
help/: LINGUAS  Makefile  Makefile.am  Makefile.in  meson.build  pluma-plugins.pot
help/C/: HACKING  bookmarks.page  bracketcompletion.page  code-comment.page  codecomment.page  index.page  legal-plugins.xml  multiedit.page  synctex.page  terminal.page  wordcompletion.page
help/af/: af.po
help/am/: am.po
help/an/: an.po
help/ar/: ar.po
help/as/: as.po
help/ast/: ast.po
help/az/: az.po
help/be/: be.po
help/bg/: bg.po
help/bn/: bn.po
help/bn_IN/: bn_IN.po
help/br/: br.po
help/bs/: bs.po
help/ca/: ca.po
help/ca@valencia/: ca@valencia.po
help/cmn/: cmn.po
help/crh/: crh.po
help/cs/: cs.po
help/csb/: csb.po
help/cy/: cy.po
help/da/: da.po
help/de/: de.po
help/dz/: dz.po
help/el/: el.po
help/en_AU/: en_AU.po
help/en_CA/: en_CA.po
help/en_GB/: en_GB.po
help/eo/: eo.po
help/es/: es.po
help/es_AR/: es_AR.po
help/es_CL/: es_CL.po
help/es_CO/: es_CO.po
help/es_CR/: es_CR.po
help/es_DO/: es_DO.po
help/es_EC/: es_EC.po
help/es_ES/: es_ES.po
help/es_MX/: es_MX.po
help/es_NI/: es_NI.po
help/es_PA/: es_PA.po
help/es_PE/: es_PE.po
help/es_PR/: es_PR.po
help/es_SV/: es_SV.po
help/es_UY/: es_UY.po
help/es_VE/: es_VE.po
help/et/: et.po
help/eu/: eu.po
help/fa/: fa.po
help/fi/: fi.po
help/fr/: fr.po
help/frp/: frp.po
help/fur/: fur.po
help/fy/: fy.po
help/ga/: ga.po
help/gl/: gl.po
help/gu/: gu.po
help/ha/: ha.po
help/he/: he.po
help/hi/: hi.po
help/hr/: hr.po
help/hu/: hu.po
help/hy/: hy.po
help/ia/: ia.po
help/id/: id.po
help/ie/: ie.po
help/ig/: ig.po
help/is/: is.po
help/it/: it.po
help/ja/: ja.po
help/jv/: jv.po
help/ka/: ka.po
help/kab/: kab.po
help/kk/: kk.po
help/km/: km.po
help/kn/: kn.po
help/ko/: ko.po
help/ks/: ks.po
help/ku/: ku.po
help/ky/: ky.po
help/la/: la.po
help/lb/: lb.po
help/lt/: lt.po
help/lv/: lv.po
help/mai/: mai.po
help/mg/: mg.po
help/mk/: mk.po
help/ml/: ml.po
help/mn/: mn.po
help/mr/: mr.po
help/ms/: ms.po
help/nb/: nb.po
help/nds/: nds.po
help/ne/: ne.po
help/nl/: nl.po
help/nn/: nn.po
help/nso/: nso.po
help/oc/: oc.po
help/or/: or.po
help/pa/: pa.po
help/pl/: pl.po
help/ps/: ps.po
help/pt/: pt.po
help/pt_BR/: pt_BR.po
help/ro/: ro.po
help/ru/: ru.po
help/rw/: rw.po
help/sc/: sc.po
help/si/: si.po
help/sk/: sk.po
help/sl/: sl.po
help/sq/: sq.po
help/sr/: sr.po
help/sr@latin/: sr@latin.po
help/sv/: sv.po
help/sw/: sw.po
help/ta/: ta.po
help/te/: te.po
help/th/: th.po
help/tr/: tr.po
help/ug/: ug.po
help/uk/: uk.po
help/ur/: ur.po
help/ur_PK/: ur_PK.po
help/uz/: uz.po
help/vi/: vi.po
help/wa/: wa.po
help/xh/: xh.po
help/yo/: yo.po
help/zh-Hans/: zh-Hans.po
help/zh_CN/: zh_CN.po
help/zh_HK/: zh_HK.po
help/zh_TW/: zh_TW.po
help/zu/: zu.po
plugins/: Makefile.am  gpdefs.py.in  meson.build
plugins/bookmarks/: Makefile.am  bookmarks.plugin.desktop.in.in  meson.build  pluma-bookmarks-plugin.c  pluma-bookmarks-plugin.h  pluma-bookmarks.metainfo.xml.in.in  template.pluma-bookmarks.metainfo.xml
plugins/bracketcompletion/: Makefile.am  bracketcompletion.plugin.desktop.in.in  bracketcompletion.py  meson.build
plugins/codecomment/: Makefile.am  codecomment.plugin.desktop.in  codecomment.plugin.desktop.in.in  codecomment.py  meson.build  pluma-codecomment.metainfo.xml.in  pluma-codecomment.metainfo.xml.in.in
plugins/multiedit/: Makefile.am  multiedit.plugin.desktop.in.in
plugins/multiedit/multiedit/: Makefile.am  __init__.py  signals.py  viewactivatable.py  windowactivatable.py
plugins/quickhighlight/: Makefile.am  meson.build  pluma-quickhighlight-plugin.c  pluma-quickhighlight-plugin.h  pluma-quickhighlight.metainfo.xml.in.in  quickhighlight.plugin.desktop.in.in
plugins/smartspaces/: Makefile.am  meson.build  smartspaces.plugin.desktop.in.in  smartspaces.py
plugins/sourcecodebrowser/: Makefile.am  meson.build  org.mate.pluma.plugins.sourcecodebrowser.gschema.xml.in  sourcecodebrowser.plugin.desktop.in.in
plugins/sourcecodebrowser/sourcecodebrowser/: Makefile.am  __init__.py  configure_dialog.ui  ctags.py  meson.build  sourcecodebrowser.py
plugins/sourcecodebrowser/sourcecodebrowser/icons/: Makefile.am  meson.build
plugins/synctex/: Makefile.am  meson.build  pluma-synctex.metainfo.xml.in  pluma-synctex.metainfo.xml.in.in  synctex.plugin.desktop.in.in
plugins/synctex/synctex/: Makefile.am  __init__.py  atril_dbus.py  synctex.py
plugins/terminal/: Makefile.am  meson.build  org.mate.pluma.plugins.terminal.gschema.xml.in  pluma-terminal.metainfo.xml.in.in  template.pluma-terminal.metainfo.xml  terminal.plugin.desktop.in.in  terminal.py
plugins/wordcompletion/: Makefile.am  meson.build  org.mate.pluma.plugins.wordcompletion.gschema.xml.in  pluma-word-completion-configure.ui  pluma-word-completion-plugin.c  pluma-word-completion-plugin.h  pluma-word-completion.gresource.xml  wordcompletion.plugin.desktop.in.in
(+191 files in other folders)
