pluma_help_sources = [
  'bookmarks.page',
  'bracketcompletion.page',
  'codecomment.page',
  'synctex.page',
  'terminal.page',
  'wordcompletion.page',
  'index.page',
  'legal-plugins.xml',
]

gnome.yelp(
  'pluma',
  sources: pluma_help_sources,
  media: [
    'figures/pluma-icon.png',
    'figures/pluma-plugin-icon.png',
  ],
)
