
sources_files = files(
  'missing-image.png',
  'source-class.png',
  'source-code-browser.png',
  'source-define.png',
  'source-enumerator.png',
  'source-field.png',
  'source-function.png',
  'source-macro.png',
  'source-member.png',
  'source-method.png',
  'source-namespace.png',
  'source-property.png',
  'source-struct.png',
  'source-table.png',
  'source-typedef.png',
  'source-variable.png'

)
install_data(
  sources_files,
  install_dir: join_paths(
    pkgdatadir,
    'plugins',
    'sourcecodebrowser',
    'icons'
  )
)
